<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ryde</string>

    <string name="action_settings">Settings</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="search">Search</string>

    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Sign In</string>
    
    <string name="add_dp">Add DashPress to Your Site</string>
    <string-array name="arr_filter">
        <item >Custom Range</item>
        <item >Today</item>
        <item >Yesterday</item>
        <item >Week</item>
        <item >This Month</item>
        <item >Last Month</item>
        <item >Year to date</item>
        <item >Lifetime</item>
    </string-array>

    <string name="awesome_font_1">&#xf007;</string>
    <string name="awesome_font_profile">&#xf007;</string>
    <string name="awesome_font_learning">&#xf212;</string>
    <string name="awesome_font_market">&#xf217;</string>
    <string name="awesome_font_news">&#xf15c;</string>
    <string name="awesome_font_quiz">&#xf059;</string>
    <string name="awesome_font_statistics">&#xf201;</string>

    <string name="awesome_font_calendar">&#xf073;</string>


    <string name="text_about_us1">comfort solutions, including solar lease and purchase plans; heating, cooling and water heating equipment sales and installations; and a service contracts for heating, cooling, water heating, electrical and standby generators.</string>
    <string name="text_about_us2">   Quality products by name-brand manufacturers who you know and trust</string>

    <string name="text_our_programs1">As a home or business owner, you always look for ways to save. Switch to solar power and lower your electricity bills with clean, reliable power for your home - year in and year out.</string>
    <string name="text_our_programs2">A solar panel system is one of the most valuable improvements you can make to your home, especially when you factor in: </string>






    <string name="main_title">RYDE</string>
    <string name="Settings_title">Settings</string>
    <string name="btn_back">Back</string>
    <string name="btn_Search_Best_Fare">Search Best Fare</string>
    <string name="edit_Pickup_Point">Pickup Point</string>
    <string name="edit_Where">Where you want to go?</string>

    <string name="text_Ryde">Ryde</string>
    <string name="text_Fare">Fare</string>
    <string name="text_Pickup">Pickup</string>


    <string name="settings_Lyft">Lyft</string>
    <string name="settings_InstaRyde">InstaRyde</string>
    <string name="settings_PublicCab">PublicCab</string>
    <string name="settings_Sidecar">Sidecar</string>

    <string name="settings_Blue_cab">Blue cab</string>
    <string name="settings_Public_taxi">Public taxi</string>
    <string name="settings_Gold_Cab">Gold Cab</string>
    <string name="settings_Sunlight">Sunlight</string>
    <string name="settings_Uber">Uber</string>
    <string name="settings_Grab">Grab</string>

    <string name="menu_Setting">Setting</string>
    <string name="menu_Payment">Payment</string>
    <string name="menu_Feedback">Feedback</string>
    <string name="menu_Tell_a_friend">Tell a friend</string>
    <string name="menu_Rate_us">Rate us</string>
    <string name="menu_About_us">About us</string>

</resources>