<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/reLayTop"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/topBarColor">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:scaleType="fitCenter"
            android:padding="5dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_left_arrow"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/tvPlaceDetailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:maxLines="1"
            android:text="Settings"
            android:textColor="#fff"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_below="@+id/reLayTopBar"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_20"
        android:paddingLeft="@dimen/settings_padding"
        android:paddingRight="@dimen/settings_padding">

        <CheckBox
            android:id="@+id/cbCompany1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_Blue_cab"/>

        <CheckBox
            android:id="@+id/cbCompany2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_Public_taxi"/>

        <CheckBox
            android:id="@+id/cbCompany3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_Gold_Cab"/>

        <CheckBox
            android:id="@+id/cbCompany4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_Sunlight"/>

        <CheckBox
            android:id="@+id/cbCompany5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_Uber"/>

        <CheckBox
            android:id="@+id/cbCompany6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_Grab"/>
    </LinearLayout>
</LinearLayout>